# autoLeetcode

./: .gitignore  CLAUDE.md  README.md  config.ini.template  pyproject.toml
.claude/: settings.local.json
autoleetcode/: __init__.py  main.py
autoleetcode/api/: __init__.py  exceptions.py
autoleetcode/cli/: __init__.py  commands.py  verifier.py
autoleetcode/code/: __init__.py  parser.py
autoleetcode/config/: configuration.py
autoleetcode/file_handler/: __init__.py  path_utils.py
autoleetcode/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py  zhipu_client.py
autoleetcode/notification/: notifier.py
autoleetcode/ocr/: __init__.py  base.py  factory.py  formatter.py  paddle_processor.py  preprocessor.py
autoleetcode/security/: code_executor.py
autoleetcode/utils/: logging_config.py
